fix: Tweak alignment a bit.

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ svg.logo {
 
 .brand {
   margin-top: 52px;
-  margin-left: 10px;
+  margin-left: 12px;
 }
 
 body {
